force-app/main/default/objects/acn_ttn__Titan_ADA_UnhandledOrgError__c/acn_ttn__Titan_ADA_UnhandledOrgError__c.object-meta.xml
<CustomObject>
    <label>Titan UnhandledOrgError</label>
    <nameField>
        <displayFormat>UnHandled-{000000}</displayFormat>
        <label>Vmware Unhandled Error Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Titan UnhandledOrgErrors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>