force-app/main/default/objects/acn_ttn__Titan_ADA_UnhandledOrgError__c/fields/acn_ttn__Assigned_To_Formula__c.field-meta.xml
<CustomField>
    <fullName>acn_ttn__Assigned_To_Formula__c</fullName>
    <formula>acn_ttn__AssignedTo__r.FirstName + &apos; &apos; +  acn_ttn__AssignedTo__r.LastName</formula>
    <label>Assigned To Formula</label>
    <type>Text</type>
</CustomField>