force-app/main/default/objects/acn_ttn__Titan_ADA_UnhandledOrgError__c/fields/acn_ttn__Exception_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>acn_ttn__Exception_Sub_Type__c</fullName>
    <description>Store exception sub type of error log record</description>
    <label>Exception Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>101 SOQL</fullName>
            </value>
            <value>
                <fullName>201 SOQL</fullName>
            </value>
            <value>
                <fullName>50001 SOQL</fullName>
            </value>
            <value>
                <fullName>101 DML</fullName>
            </value>
            <value>
                <fullName>10001 DML</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>