force-app/main/default/objects/acn_ttn__Titan_ADA_UnhandledOrgError__c/fields/acn_ttn__Mail_Notification__c.field-meta.xml
<CustomField>
    <fullName>acn_ttn__Mail_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mail_Notification</label>
    <type>Checkbox</type>
</CustomField>