force-app/main/default/objects/acn_ttn__Titan_ADA_UnhandledOrgError__c/fields/acn_ttn__Transactional_user__c.field-meta.xml
<CustomField>
    <fullName>acn_ttn__Transactional_user__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transactional user</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TitanADA_UnhandledOrgErrors</relationshipName>
    <type>Lookup</type>
</CustomField>