force-app/main/default/objects/acn_ttn__Titan_ADA_UnhandledOrgError__c/listViews/acn_ttn__All1.listView-meta.xml
<ListView>
    <fullName>acn_ttn__All1</fullName>
    <columns>NAME</columns>
    <columns>acn_ttn__Status__c</columns>
    <columns>acn_ttn__Type_of_Exception__c</columns>
    <columns>acn_ttn__Subject__c</columns>
    <columns>acn_ttn__CausedByClass__c</columns>
    <columns>acn_ttn__Frequency__c</columns>
    <columns>acn_ttn__Is_impacting__c</columns>
    <columns>acn_ttn__AssignedTo__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>